--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ body {
       <!-- Diagram area -->
       <div class="hiw__diagram-area">
         <div class="hiw__diagram-wrapper">
-          <svg class="hiw__svg" viewBox="0 0 900 430" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+          <svg class="hiw__svg" viewBox="0 0 900 500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <defs>
               <marker id="arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
@@ -355,105 +355,103 @@ body {
             </defs>
 
             <!-- Feed Water label (top left) -->
-            <text x="195" y="48" text-anchor="middle" class="svgLabel">Feed water</text>
-            <text x="195" y="62" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
-            <text x="195" y="74" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
+            <text x="150" y="38" text-anchor="middle" class="svgLabel">Feed water</text>
+            <text x="150" y="52" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
+            <text x="150" y="64" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
 
-            <!-- Line from feed water down then right to INTAKE -->
-            <path d="M 195 83 L 195 120" class="stream" marker-end="url(#arrow)"/>
+            <!-- Line from feed water down to INTAKE -->
+            <path d="M 150 73 L 150 110" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- Inert gas label (top right) -->
+            <!-- INTAKE (left side, top row) -->
+            <g id="m-intake" class="module cots">
+              <rect x="75" y="110" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="150" y="138" text-anchor="middle" class="moduleTitle">Intake</text>
+              <text x="150" y="156" text-anchor="middle" class="moduleTitle">& Stabilization</text>
+            </g>
+
+            <!-- Inert gas label (top center-right) -->
             <g class="svgCallout">
-              <rect x="370" y="35" width="110" height="36" rx="0" class="svgCalloutBox"/>
-              <text x="425" y="51" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
-              <text x="425" y="63" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
+              <rect x="390" y="25" width="110" height="36" rx="0" class="svgCalloutBox"/>
+              <text x="445" y="41" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
+              <text x="445" y="53" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
             </g>
 
             <!-- Vertical line from Inert carrier down to Gas-Sorbent -->
-            <path d="M 425 71 L 425 120" class="stream"/>
+            <path d="M 445 61 L 445 110" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- INTAKE (below feed water, left side) -->
-            <g id="m-intake" class="module cots">
-              <rect x="120" y="120" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="195" y="148" text-anchor="middle" class="moduleTitle">Intake</text>
-              <text x="195" y="166" text-anchor="middle" class="moduleTitle">& Stabilization</text>
-            </g>
-
-            <!-- Horizontal line from Intake going right to Gas-Sorbent -->
-            <path d="M 270 150 L 350 150" class="stream" marker-end="url(#arrow)"/>
-
-            <!-- GAS-SORBENT (center, below Inert carrier) -->
+            <!-- GAS-SORBENT (center, top row) -->
             <g id="m-dosing" class="module core">
-              <rect x="350" y="120" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="425" y="148" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
-              <text x="425" y="166" text-anchor="middle" class="moduleSub">(Dosing)</text>
+              <rect x="370" y="110" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="445" y="138" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
+              <text x="445" y="156" text-anchor="middle" class="moduleSub">(Dosing)</text>
             </g>
+
+            <!-- Horizontal line from Intake to Gas-Sorbent -->
+            <path d="M 225 140 L 370 140" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Line from Gas-Sorbent to Sorption -->
-            <path d="M 500 150 L 600 150" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 520 140 L 620 140" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- SORPTION (right side) -->
+            <!-- SORPTION (right side, top row) -->
             <g id="m-sorption" class="module core">
-              <rect x="600" y="105" width="120" height="90" rx="0" class="moduleBox"/>
-              <text x="660" y="150" text-anchor="middle" class="moduleTitle">Sorption</text>
-              <text x="660" y="168" text-anchor="middle" class="moduleSub">(Contactor)</text>
+              <rect x="620" y="110" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="695" y="138" text-anchor="middle" class="moduleTitle">Sorption</text>
+              <text x="695" y="156" text-anchor="middle" class="moduleSub">(Contactor)</text>
             </g>
 
-            <!-- Line from Sorption down to Separation -->
-            <path d="M 660 195 L 660 225 L 425 225 L 425 250" class="stream" marker-end="url(#arrow)"/>
+            <!-- Line from Sorption down and left to Separation -->
+            <path d="M 695 170 L 695 230 L 445 230 L 445 250" class="stream" marker-end="url(#arrow)"/>
+
+            <!-- SEPARATION (center, middle row) -->
+            <g id="m-separation" class="module core">
+              <rect x="370" y="250" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="445" y="278" text-anchor="middle" class="moduleTitle">Separation</text>
+              <text x="445" y="296" text-anchor="middle" class="moduleSub">(Phase split)</text>
+            </g>
+
+            <!-- Line from Separation left to Concentrate -->
+            <path d="M 370 280 L 225 280" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
             <g id="m-concentrate" class="module concentrate">
-              <rect x="120" y="260" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="195" y="288" text-anchor="middle" class="moduleTitle">Concentrate</text>
-              <text x="195" y="306" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
+              <rect x="75" y="250" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="150" y="278" text-anchor="middle" class="moduleTitle">Concentrate</text>
+              <text x="150" y="296" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
             </g>
 
-            <!-- Line from Separation down to Concentrate -->
-            <path d="M 350 280 L 270 290" class="stream concentrate" marker-end="url(#arrowConc)"/>
+            <!-- Line from Separation down to Mineralization -->
+            <path d="M 445 310 L 445 360" class="stream" marker-end="url(#arrow)"/>
 
-            <!-- SEPARATION (center) -->
-            <g id="m-separation" class="module core">
-              <rect x="350" y="250" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="425" y="278" text-anchor="middle" class="moduleTitle">Separation</text>
-              <text x="425" y="296" text-anchor="middle" class="moduleSub">(Phase split)</text>
-            </g>
-
-            <!-- Line from Separation down to Mineralization (left side) -->
-            <path d="M 500 280 L 540 280" class="stream" marker-end="url(#arrow)"/>
-
-            <!-- MINERALIZATION (center bottom, wider) -->
+            <!-- MINERALIZATION (center bottom) -->
             <g id="m-polishing" class="module cots">
-              <rect x="540" y="250" width="190" height="60" rx="0" class="moduleBox"/>
-              <text x="635" y="278" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="635" y="296" text-anchor="middle" class="moduleTitle">& Polishing</text>
+              <rect x="350" y="360" width="190" height="60" rx="0" class="moduleBox"/>
+              <text x="445" y="388" text-anchor="middle" class="moduleTitle">Mineralization</text>
+              <text x="445" y="406" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
-            <!-- Line from Mineralization down to DRINKING -->
-            <path d="M 730 280 L 760 280" class="stream" marker-end="url(#arrow)"/>
+            <!-- Line from Mineralization right to DRINKING -->
+            <path d="M 540 390 L 620 390" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
             <g id="m-drinking" class="module cots">
-              <rect x="760" y="250" width="110" height="60" rx="0" class="moduleBox"/>
-              <text x="815" y="278" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="815" y="296" text-anchor="middle" class="moduleSub">Water</text>
+              <rect x="620" y="360" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="695" y="388" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="695" y="406" text-anchor="middle" class="moduleSub">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
-            <path d="M 870 280 L 890 280" class="stream"/>
+            <path d="M 770 390 L 840 390" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="330" y="90" width="420" height="240" class="coreBoundary"/>
+            <rect x="350" y="90" width="440" height="350" class="coreBoundary"/>
 
-            <!-- LEGEND (inside SVG, under Concentrate) -->
-            <g class="legend-group" transform="translate(20, 350)">
+            <!-- LEGEND (inside SVG, bottom left) -->
+            <g class="legend-group" transform="translate(20, 440)">
               <text x="0" y="0" class="svgLabel" style="font-weight:700;font-size:10px;letter-spacing:0.08em;">LEGEND</text>
               <rect x="0" y="10" width="14" height="14" rx="2" fill="#D4F1F6" stroke="rgba(0,158,186,0.7)" stroke-width="1.5"/>
               <text x="20" y="21" style="font:400 10px ui-sans-serif,system-ui;fill:rgba(15,23,42,0.75);">AQUINTAQA core module boundary (encapsulated/protected)</text>
               <rect x="0" y="30" width="14" height="14" rx="2" fill="#fff" stroke="rgba(186,198,211,0.8)" stroke-width="1.5"/>
               <text x="20" y="41" style="font:400 10px ui-sans-serif,system-ui;fill:rgba(15,23,42,0.75);">COTS-based auxiliary systems (intake, utilities, polishing, controls)</text>
-              <text x="0" y="60" style="font:italic 400 9px ui-sans-serif,system-ui;fill:rgba(100,116,139,0.8);">Note: sensitive setpoints, materials, and core control logic are disclosed stepwise under NDA.</text>
-              <text x="0" y="74" style="font:italic 400 9px ui-sans-serif,system-ui;fill:rgba(100,116,139,0.8);">Colour coding applies to modules only, not to streams.</text>
             </g>
           </svg>
         </div>
