--- a/index.html
+++ b/index.html
@@ -355,95 +355,95 @@ body {
             </defs>
 
             <!-- Feed Water label (top left) -->
-            <text x="150" y="38" text-anchor="middle" class="svgLabel">Feed water</text>
-            <text x="150" y="52" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
-            <text x="150" y="64" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
+            <text x="180" y="35" text-anchor="middle" class="svgLabel">Feed water</text>
+            <text x="180" y="49" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
+            <text x="180" y="61" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
 
             <!-- Line from feed water down to INTAKE -->
-            <path d="M 150 73 L 150 110" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 180 70 L 180 95 L 250 95 L 250 120" class="stream" marker-end="url(#arrow)"/>
 
             <!-- INTAKE (left side, top row) -->
             <g id="m-intake" class="module cots">
-              <rect x="75" y="110" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="150" y="138" text-anchor="middle" class="moduleTitle">Intake</text>
-              <text x="150" y="156" text-anchor="middle" class="moduleTitle">& Stabilization</text>
+              <rect x="200" y="120" width="100" height="60" rx="0" class="moduleBox"/>
+              <text x="250" y="145" text-anchor="middle" class="moduleTitle">Intake</text>
+              <text x="250" y="163" text-anchor="middle" class="moduleTitle">& Stabilization</text>
             </g>
 
             <!-- Inert gas label (top center-right) -->
             <g class="svgCallout">
-              <rect x="390" y="25" width="110" height="36" rx="0" class="svgCalloutBox"/>
-              <text x="445" y="41" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
-              <text x="445" y="53" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
+              <rect x="430" y="22" width="110" height="36" rx="0" class="svgCalloutBox"/>
+              <text x="485" y="38" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
+              <text x="485" y="50" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
             </g>
 
             <!-- Vertical line from Inert carrier down to Gas-Sorbent -->
-            <path d="M 445 61 L 445 110" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 485 58 L 485 120" class="stream" marker-end="url(#arrow)"/>
 
             <!-- GAS-SORBENT (center, top row) -->
             <g id="m-dosing" class="module core">
-              <rect x="370" y="110" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="445" y="138" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
-              <text x="445" y="156" text-anchor="middle" class="moduleSub">(Dosing)</text>
+              <rect x="410" y="120" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="485" y="145" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
+              <text x="485" y="163" text-anchor="middle" class="moduleSub">(Dosing)</text>
             </g>
 
             <!-- Horizontal line from Intake to Gas-Sorbent -->
-            <path d="M 225 140 L 370 140" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 300 150 L 410 150" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Line from Gas-Sorbent to Sorption -->
-            <path d="M 520 140 L 620 140" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 560 150 L 640 150" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SORPTION (right side, top row) -->
             <g id="m-sorption" class="module core">
-              <rect x="620" y="110" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="695" y="138" text-anchor="middle" class="moduleTitle">Sorption</text>
-              <text x="695" y="156" text-anchor="middle" class="moduleSub">(Contactor)</text>
+              <rect x="640" y="120" width="110" height="60" rx="0" class="moduleBox"/>
+              <text x="695" y="145" text-anchor="middle" class="moduleTitle">Sorption</text>
+              <text x="695" y="163" text-anchor="middle" class="moduleSub">(Contactor)</text>
             </g>
 
             <!-- Line from Sorption down and left to Separation -->
-            <path d="M 695 170 L 695 230 L 445 230 L 445 250" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 750 150 L 800 150 L 800 280 L 485 280 L 485 290" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SEPARATION (center, middle row) -->
             <g id="m-separation" class="module core">
-              <rect x="370" y="250" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="445" y="278" text-anchor="middle" class="moduleTitle">Separation</text>
-              <text x="445" y="296" text-anchor="middle" class="moduleSub">(Phase split)</text>
+              <rect x="410" y="290" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="485" y="315" text-anchor="middle" class="moduleTitle">Separation</text>
+              <text x="485" y="333" text-anchor="middle" class="moduleSub">(Phase split)</text>
             </g>
 
             <!-- Line from Separation left to Concentrate -->
-            <path d="M 370 280 L 225 280" class="stream concentrate" marker-end="url(#arrowConc)"/>
+            <path d="M 410 320 L 190 320" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
             <g id="m-concentrate" class="module concentrate">
-              <rect x="75" y="250" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="150" y="278" text-anchor="middle" class="moduleTitle">Concentrate</text>
-              <text x="150" y="296" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
+              <rect x="50" y="290" width="140" height="60" rx="0" class="moduleBox"/>
+              <text x="120" y="315" text-anchor="middle" class="moduleTitle">Concentrate</text>
+              <text x="120" y="333" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
             </g>
 
             <!-- Line from Separation down to Mineralization -->
-            <path d="M 445 310 L 445 360" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 485 350 L 485 390" class="stream" marker-end="url(#arrow)"/>
 
             <!-- MINERALIZATION (center bottom) -->
             <g id="m-polishing" class="module cots">
-              <rect x="350" y="360" width="190" height="60" rx="0" class="moduleBox"/>
-              <text x="445" y="388" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="445" y="406" text-anchor="middle" class="moduleTitle">& Polishing</text>
+              <rect x="360" y="390" width="250" height="60" rx="0" class="moduleBox"/>
+              <text x="485" y="418" text-anchor="middle" class="moduleTitle">Mineralization</text>
+              <text x="485" y="436" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
             <!-- Line from Mineralization right to DRINKING -->
-            <path d="M 540 390 L 620 390" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 610 420 L 660 420" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
             <g id="m-drinking" class="module cots">
-              <rect x="620" y="360" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="695" y="388" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="695" y="406" text-anchor="middle" class="moduleSub">Water</text>
+              <rect x="660" y="390" width="120" height="60" rx="0" class="moduleBox"/>
+              <text x="720" y="418" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="720" y="436" text-anchor="middle" class="moduleSub">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
-            <path d="M 770 390 L 840 390" class="stream"/>
+            <path d="M 780 420 L 850 420" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="350" y="90" width="440" height="350" class="coreBoundary"/>
+            <rect x="390" y="100" width="430" height="270" class="coreBoundary"/>
 
             <!-- LEGEND (inside SVG, bottom left) -->
             <g class="legend-group" transform="translate(20, 440)">
