Feed water сдвинут левее, стрелка идет диагонально вниз-вправо к Intake

--- a/index.html
+++ b/index.html
@@ -355,12 +355,12 @@ body {
             </defs>
 
             <!-- Feed Water label (top left) -->
-            <text x="180" y="35" text-anchor="middle" class="svgLabel">Feed water</text>
-            <text x="180" y="49" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
-            <text x="180" y="61" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
+            <text x="120" y="35" text-anchor="middle" class="svgLabel">Feed water</text>
+            <text x="120" y="49" text-anchor="middle" class="svgSubLabel">(seawater / brackish /</text>
+            <text x="120" y="61" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
 
             <!-- Line from feed water down to INTAKE -->
-            <path d="M 180 70 L 180 95 L 250 95 L 250 120" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 120 70 L 250 120" class="stream" marker-end="url(#arrow)"/>
 
             <!-- INTAKE (left side, top row) -->
             <g id="m-intake" class="module cots">
