Стрелка от Feed water теперь L-образная: вниз затем вправо к Intake

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ body {
             <text x="120" y="61" text-anchor="middle" class="svgSubLabel">high-salinity / variable)</text>
 
             <!-- Line from feed water down to INTAKE -->
-            <path d="M 120 70 L 250 120" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 120 70 L 120 150 L 200 150" class="stream" marker-end="url(#arrow)"/>
 
             <!-- INTAKE (left side, top row) -->
             <g id="m-intake" class="module cots">
