Gas sorbent опущен ниже, стрелка от Intake зигзагообразная (вправо-вниз-вправо)

--- a/index.html
+++ b/index.html
@@ -377,20 +377,20 @@ body {
             </g>
 
             <!-- Vertical line from Inert carrier down to Gas-Sorbent -->
-            <path d="M 485 58 L 485 120" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 485 58 L 485 160" class="stream" marker-end="url(#arrow)"/>
 
             <!-- GAS-SORBENT (center, top row) -->
             <g id="m-dosing" class="module core">
-              <rect x="410" y="120" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="485" y="145" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
-              <text x="485" y="163" text-anchor="middle" class="moduleSub">(Dosing)</text>
+              <rect x="410" y="160" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="485" y="185" text-anchor="middle" class="moduleTitle">Gas-Sorbent</text>
+              <text x="485" y="203" text-anchor="middle" class="moduleSub">(Dosing)</text>
             </g>
 
             <!-- Horizontal line from Intake to Gas-Sorbent -->
-            <path d="M 300 150 L 410 150" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 300 150 L 350 150 L 350 190 L 410 190" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Line from Gas-Sorbent to Sorption -->
-            <path d="M 560 150 L 640 150" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 560 190 L 600 190 L 600 150 L 640 150" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SORPTION (right side, top row) -->
             <g id="m-sorption" class="module core">
