--- a/index.html
+++ b/index.html
@@ -390,17 +390,17 @@ body {
             <path d="M 300 150 L 350 150 L 350 190 L 410 190" class="stream" marker-end="url(#arrow)"/>
 
             <!-- Line from Gas-Sorbent to Sorption -->
-            <path d="M 560 190 L 600 190 L 600 150 L 640 150" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 560 190 L 640 190" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SORPTION (right side, top row) -->
             <g id="m-sorption" class="module core">
-              <rect x="640" y="120" width="110" height="60" rx="0" class="moduleBox"/>
-              <text x="695" y="145" text-anchor="middle" class="moduleTitle">Sorption</text>
-              <text x="695" y="163" text-anchor="middle" class="moduleSub">(Contactor)</text>
+              <rect x="640" y="165" width="80" height="80" rx="0" class="moduleBox"/>
+              <text x="680" y="200" text-anchor="middle" class="moduleTitle">Sorption</text>
+              <text x="680" y="218" text-anchor="middle" class="moduleSub">(Contactor)</text>
             </g>
 
             <!-- Line from Sorption down and left to Separation -->
-            <path d="M 750 150 L 800 150 L 800 280 L 485 280 L 485 290" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 680 245 L 680 320 L 560 320 L 560 290" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SEPARATION (center, middle row) -->
             <g id="m-separation" class="module core">
@@ -443,7 +443,7 @@ body {
             <path d="M 780 420 L 850 420" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="390" y="80" width="430" height="290" class="coreBoundary"/>
+            <rect x="390" y="80" width="400" height="290" class="coreBoundary"/>
 
             <!-- LEGEND (inside SVG, bottom left) -->
             <g class="legend-group" transform="translate(20, 440)">
