--- a/index.html
+++ b/index.html
@@ -400,50 +400,50 @@ body {
             </g>
 
             <!-- Line from Sorption down and left to Separation -->
-            <path d="M 780 190 L 820 190 L 820 320 L 560 320" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 780 190 L 820 190 L 820 320 L 500 320" class="stream" marker-end="url(#arrow)"/>
 
             <!-- SEPARATION (center, middle row) -->
             <g id="m-separation" class="module core">
-              <rect x="410" y="290" width="150" height="60" rx="0" class="moduleBox"/>
-              <text x="485" y="315" text-anchor="middle" class="moduleTitle">Separation</text>
-              <text x="485" y="333" text-anchor="middle" class="moduleSub">(Phase split)</text>
+              <rect x="350" y="290" width="150" height="60" rx="0" class="moduleBox"/>
+              <text x="425" y="315" text-anchor="middle" class="moduleTitle">Separation</text>
+              <text x="425" y="333" text-anchor="middle" class="moduleSub">(Phase split)</text>
             </g>
 
             <!-- Line from Separation left to Concentrate -->
-            <path d="M 410 320 L 190 320" class="stream concentrate" marker-end="url(#arrowConc)"/>
+            <path d="M 350 310 L 310 310 L 310 280 L 240 280 L 240 340 L 190 340" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
             <g id="m-concentrate" class="module concentrate">
-              <rect x="50" y="290" width="140" height="60" rx="0" class="moduleBox"/>
-              <text x="120" y="315" text-anchor="middle" class="moduleTitle">Concentrate</text>
-              <text x="120" y="333" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
+              <rect x="50" y="310" width="140" height="60" rx="0" class="moduleBox"/>
+              <text x="120" y="335" text-anchor="middle" class="moduleTitle">Concentrate</text>
+              <text x="120" y="353" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
             </g>
 
             <!-- Line from Separation down to Mineralization -->
-            <path d="M 485 350 L 485 390" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 425 350 L 425 390" class="stream" marker-end="url(#arrow)"/>
 
             <!-- MINERALIZATION (center bottom) -->
             <g id="m-polishing" class="module cots">
-              <rect x="360" y="390" width="250" height="60" rx="0" class="moduleBox"/>
-              <text x="485" y="418" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="485" y="436" text-anchor="middle" class="moduleTitle">& Polishing</text>
+              <rect x="300" y="390" width="250" height="60" rx="0" class="moduleBox"/>
+              <text x="425" y="418" text-anchor="middle" class="moduleTitle">Mineralization</text>
+              <text x="425" y="436" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
             <!-- Line from Mineralization right to DRINKING -->
-            <path d="M 610 420 L 660 420" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 550 420 L 600 420" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
             <g id="m-drinking" class="module cots">
-              <rect x="660" y="390" width="120" height="60" rx="0" class="moduleBox"/>
-              <text x="720" y="418" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="720" y="436" text-anchor="middle" class="moduleSub">Water</text>
+              <rect x="600" y="390" width="120" height="60" rx="0" class="moduleBox"/>
+              <text x="660" y="418" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="660" y="436" text-anchor="middle" class="moduleSub">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
-            <path d="M 780 420 L 850 420" class="stream"/>
+            <path d="M 720 420 L 790 420" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="390" y="80" width="400" height="290" class="coreBoundary"/>
+            <rect x="330" y="80" width="470" height="290" class="coreBoundary"/>
 
             <!-- LEGEND (inside SVG, bottom left) -->
             <g class="legend-group" transform="translate(20, 440)">
