--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ body {
       <!-- Diagram area -->
       <div class="hiw__diagram-area">
         <div class="hiw__diagram-wrapper">
-          <svg class="hiw__svg" viewBox="0 0 900 500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+          <svg class="hiw__svg" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <defs>
               <marker id="arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
@@ -420,33 +420,33 @@ body {
             </g>
 
             <!-- Line from Separation down to Mineralization -->
-            <path d="M 425 350 L 425 390" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 425 350 L 425 380 L 540 380 L 540 400" class="stream" marker-end="url(#arrow)"/>
 
             <!-- MINERALIZATION (center bottom) -->
             <g id="m-polishing" class="module cots">
-              <rect x="300" y="390" width="250" height="60" rx="0" class="moduleBox"/>
-              <text x="425" y="418" text-anchor="middle" class="moduleTitle">Mineralization</text>
-              <text x="425" y="436" text-anchor="middle" class="moduleTitle">& Polishing</text>
+              <rect x="440" y="400" width="200" height="60" rx="0" class="moduleBox"/>
+              <text x="540" y="428" text-anchor="middle" class="moduleTitle">Mineralization</text>
+              <text x="540" y="446" text-anchor="middle" class="moduleTitle">& Polishing</text>
             </g>
 
             <!-- Line from Mineralization right to DRINKING -->
-            <path d="M 550 420 L 600 420" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 640 430 L 680 430 L 680 480" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
             <g id="m-drinking" class="module cots">
-              <rect x="600" y="390" width="120" height="60" rx="0" class="moduleBox"/>
-              <text x="660" y="418" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="660" y="436" text-anchor="middle" class="moduleSub">Water</text>
+              <rect x="620" y="480" width="120" height="60" rx="0" class="moduleBox"/>
+              <text x="680" y="508" text-anchor="middle" class="moduleTitle">Drinking</text>
+              <text x="680" y="526" text-anchor="middle" class="moduleSub">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
-            <path d="M 720 420 L 790 420" class="stream"/>
+            <path d="M 740 510 L 820 510" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="330" y="80" width="470" height="290" class="coreBoundary"/>
+            <rect x="330" y="80" width="490" height="280" class="coreBoundary"/>
 
             <!-- LEGEND (inside SVG, bottom left) -->
-            <g class="legend-group" transform="translate(20, 440)">
+            <g class="legend-group" transform="translate(20, 550)">
               <text x="0" y="0" class="svgLabel" style="font-weight:700;font-size:10px;letter-spacing:0.08em;">LEGEND</text>
               <rect x="0" y="10" width="14" height="14" rx="2" fill="#D4F1F6" stroke="rgba(0,158,186,0.7)" stroke-width="1.5"/>
               <text x="20" y="21" style="font:400 10px ui-sans-serif,system-ui;fill:rgba(15,23,42,0.75);">AQUINTAQA core module boundary (encapsulated/protected)</text>
