Drinking без рамки и фона, как Feed water - только текст

--- a/index.html
+++ b/index.html
@@ -433,10 +433,9 @@ body {
             <path d="M 640 430 L 680 430 L 680 480" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
-            <g id="m-drinking" class="module cots">
-              <rect x="620" y="480" width="120" height="60" rx="0" class="moduleBox"/>
-              <text x="680" y="508" text-anchor="middle" class="moduleTitle">Drinking</text>
-              <text x="680" y="526" text-anchor="middle" class="moduleSub">Water</text>
+            <g id="m-drinking">
+              <text x="680" y="508" text-anchor="middle" class="svgLabel">Drinking</text>
+              <text x="680" y="526" text-anchor="middle" class="svgLabel">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
