--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ body {
       <!-- Diagram area -->
       <div class="hiw__diagram-area">
         <div class="hiw__diagram-wrapper">
-          <svg class="hiw__svg" viewBox="0 0 900 650" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
+          <svg class="hiw__svg" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <defs>
               <marker id="arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
@@ -430,27 +430,29 @@ body {
             </g>
 
             <!-- Line from Mineralization right to DRINKING -->
-            <path d="M 640 430 L 760 430 L 760 540" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 640 430 L 760 430 L 760 470" class="stream" marker-end="url(#arrow)"/>
 
             <!-- DRINKING WATER (bottom right) -->
             <g id="m-drinking">
-              <text x="760" y="560" text-anchor="middle" class="svgLabel">Drinking</text>
-              <text x="760" y="578" text-anchor="middle" class="svgLabel">Water</text>
+              <text x="760" y="490" text-anchor="middle" class="svgLabel">Drinking</text>
+              <text x="760" y="508" text-anchor="middle" class="svgLabel">Water</text>
             </g>
 
             <!-- Horizontal line going right from DRINKING -->
-            <path d="M 820 570 L 870 570" class="stream"/>
+            <path d="M 820 500 L 870 500" class="stream"/>
 
             <!-- Core boundary -->
-            <rect x="330" y="80" width="550" height="480" class="coreBoundary"/>
+            <rect x="330" y="80" width="550" height="390" class="coreBoundary"/>
 
             <!-- LEGEND (inside SVG, bottom left) -->
-            <g class="legend-group" transform="translate(20, 550)">
+            <g class="legend-group" transform="translate(20, 480)">
               <text x="0" y="0" class="svgLabel" style="font-weight:700;font-size:10px;letter-spacing:0.08em;">LEGEND</text>
               <rect x="0" y="10" width="14" height="14" rx="2" fill="#D4F1F6" stroke="rgba(0,158,186,0.7)" stroke-width="1.5"/>
               <text x="20" y="21" style="font:400 10px ui-sans-serif,system-ui;fill:rgba(15,23,42,0.75);">AQUINTAQA core module boundary (encapsulated/protected)</text>
               <rect x="0" y="30" width="14" height="14" rx="2" fill="#fff" stroke="rgba(186,198,211,0.8)" stroke-width="1.5"/>
               <text x="20" y="41" style="font:400 10px ui-sans-serif,system-ui;fill:rgba(15,23,42,0.75);">COTS-based auxiliary systems (intake, utilities, polishing, controls)</text>
+              <text x="0" y="60" style="font:italic 400 9px ui-sans-serif,system-ui;fill:rgba(100,116,139,0.8);">Note: sensitive setpoints, materials, and core control logic are disclosed stepwise under NDA.</text>
+              <text x="0" y="74" style="font:italic 400 9px ui-sans-serif,system-ui;fill:rgba(100,116,139,0.8);">Colour coding applies to modules only, not to streams.</text>
             </g>
           </svg>
         </div>
