--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ body {
             </g>
 
             <!-- Line from Separation left to Concentrate -->
-            <path d="M 350 310 L 310 310 L 310 280 L 240 280 L 240 340 L 190 340" class="stream concentrate" marker-end="url(#arrowConc)"/>
+            <path d="M 350 315 L 350 280 L 240 280 L 240 340 L 190 340" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
             <g id="m-concentrate" class="module concentrate">
@@ -420,7 +420,7 @@ body {
             </g>
 
             <!-- Line from Separation down to Mineralization -->
-            <path d="M 425 350 L 425 370 L 540 370 L 540 385" class="stream" marker-end="url(#arrow)"/>
+            <path d="M 425 350 L 425 370 L 380 370 L 380 415 L 440 415" class="stream" marker-end="url(#arrow)"/>
 
             <!-- MINERALIZATION (center bottom) -->
             <g id="m-polishing" class="module cots">
