Изменен шрифт на схеме на моноширинный (Space Mono / IBM Plex Mono)

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HOW IT WORKS - AQUINTAQA</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&family=IBM+Plex+Mono:wght@400;600&display=swap" rel="stylesheet">
 <style>
 :root {
   --bg: #F4F7FA;
@@ -265,13 +268,13 @@ body {
 }
 
 /* SVG Styles */
-.svgLabel { font: 500 12px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
-.svgSubLabel { font: 400 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
+.svgLabel { font: 500 12px 'Space Mono', 'IBM Plex Mono', 'Courier New', monospace; fill: rgba(15,23,42,.7); }
+.svgSubLabel { font: 400 10px 'Space Mono', 'IBM Plex Mono', 'Courier New', monospace; fill: rgba(15,23,42,.7); }
 .svgCalloutBox { fill: none; stroke: none; }
-.svgCalloutText { font: 500 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.7); }
+.svgCalloutText { font: 500 10px 'Space Mono', 'IBM Plex Mono', 'Courier New', monospace; fill: rgba(15,23,42,.7); }
 .moduleBox { stroke-width: 1; filter: none; }
-.module .moduleTitle { font: 600 13px ui-sans-serif, system-ui; fill: rgba(15,23,42,.88); }
-.module .moduleSub { font: 400 10px ui-sans-serif, system-ui; fill: rgba(15,23,42,.88); }
+.module .moduleTitle { font: 600 13px 'Space Mono', 'IBM Plex Mono', 'Courier New', monospace; fill: rgba(15,23,42,.88); }
+.module .moduleSub { font: 400 10px 'Space Mono', 'IBM Plex Mono', 'Courier New', monospace; fill: rgba(15,23,42,.88); }
 .module.core .moduleBox { fill: var(--core-fill); stroke: rgba(0,158,186,.5); }
 .module.cots .moduleBox { fill: var(--cots-fill); stroke: rgba(15,23,42,0.18); }
 .module.concentrate .moduleBox { fill: var(--conc-fill); stroke: rgba(210,132,55,.5); }
