Текст Inert carrier изменен на цвет accent (#009EBA)

--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@ body {
             <!-- Inert gas label (top center-right) -->
             <g class="svgCallout">
               <rect x="430" y="90" width="110" height="36" rx="0" class="svgCalloutBox"/>
-              <text x="485" y="106" text-anchor="middle" class="svgCalloutText">Inert carrier gas</text>
-              <text x="485" y="118" text-anchor="middle" class="svgCalloutText">+ proprietary sorbent</text>
+              <text x="485" y="106" text-anchor="middle" class="svgCalloutText" style="fill:#009EBA;">Inert carrier gas</text>
+              <text x="485" y="118" text-anchor="middle" class="svgCalloutText" style="fill:#009EBA;">+ proprietary sorbent</text>
             </g>
 
             <!-- Vertical line from Inert carrier down to Gas-Sorbent -->
