Concentrate без рамки и заливки, обновлен текст: Concentrate / residual stream

--- a/index.html
+++ b/index.html
@@ -416,10 +416,9 @@ body {
             <path d="M 425 290 L 425 280 L 240 280 L 240 340 L 190 340" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
-            <g id="m-concentrate" class="module concentrate">
-              <rect x="50" y="310" width="140" height="60" rx="0" class="moduleBox"/>
-              <text x="120" y="335" text-anchor="middle" class="moduleTitle">Concentrate</text>
-              <text x="120" y="353" text-anchor="middle" class="moduleSub">(&lt;5% flow)</text>
+            <g id="m-concentrate">
+              <text x="120" y="330" text-anchor="middle" class="svgLabel" style="fill:rgba(210,132,55,.9);">Concentrate / residual stream</text>
+              <text x="120" y="345" text-anchor="middle" class="svgSubLabel" style="fill:rgba(210,132,55,.75);">(typically &lt;5% of flow; controlled output)</text>
             </g>
 
             <!-- Line from Separation down to Mineralization -->
