Укорочена стрелка к Concentrate, текст разбит на 3 строки

--- a/index.html
+++ b/index.html
@@ -413,12 +413,13 @@ body {
             </g>
 
             <!-- Line from Separation left to Concentrate -->
-            <path d="M 425 290 L 425 280 L 240 280 L 240 340 L 190 340" class="stream concentrate" marker-end="url(#arrowConc)"/>
+            <path d="M 425 290 L 425 280 L 240 280 L 240 335 L 220 335" class="stream concentrate" marker-end="url(#arrowConc)"/>
 
             <!-- CONCENTRATE (lower left) -->
             <g id="m-concentrate">
-              <text x="120" y="330" text-anchor="middle" class="svgLabel" style="fill:rgba(210,132,55,.9);">Concentrate / residual stream</text>
-              <text x="120" y="345" text-anchor="middle" class="svgSubLabel" style="fill:rgba(210,132,55,.75);">(typically &lt;5% of flow; controlled output)</text>
+              <text x="120" y="320" text-anchor="middle" class="svgLabel" style="fill:rgba(210,132,55,.9);">Concentrate / residual stream</text>
+              <text x="120" y="335" text-anchor="middle" class="svgSubLabel" style="fill:rgba(210,132,55,.75);">(typically &lt;5% of flow;</text>
+              <text x="120" y="348" text-anchor="middle" class="svgSubLabel" style="fill:rgba(210,132,55,.75);">controlled output)</text>
             </g>
 
             <!-- Line from Separation down to Mineralization -->
