Все стрелки (кроме Concentrate) изменены на синий цвет #009EBA

--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ body {
 .module.concentrate .moduleBox { fill: var(--conc-fill); stroke: rgba(210,132,55,.5); }
 .module.concentrate .moduleTitle { fill: rgba(180,100,30,.9); }
 .module.concentrate .moduleSub { fill: rgba(180,100,30,.65); }
-.stream { fill: none; stroke: var(--stream); stroke-width: 1; stroke-dasharray: 4 3; }
-.stream.accent { stroke: var(--stream); stroke-width: 1; stroke-dasharray: 4 3; }
+.stream { fill: none; stroke: #009EBA; stroke-width: 1; stroke-dasharray: 4 3; }
+.stream.accent { stroke: #009EBA; stroke-width: 1; stroke-dasharray: 4 3; }
 .stream.concentrate { stroke: rgba(210,132,55,.6); stroke-width: 1; stroke-dasharray: 4 3; }
 .coreBoundary { fill: none; stroke: rgba(0,158,186,.18); stroke-width: 1; stroke-dasharray: 6 4; }
 .module.is-active .moduleBox { stroke-width: 1.5; stroke: var(--accent); filter: drop-shadow(0 0 6px rgba(0,158,186,0.2)); }
@@ -347,10 +347,10 @@ body {
           <svg class="hiw__svg" viewBox="0 0 900 530" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet">
             <defs>
               <marker id="arrow" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
-                <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
+                <path d="M 0 0 L 10 5 L 0 10 z" fill="#009EBA" />
               </marker>
               <marker id="arrowAccent" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
-                <path d="M 0 0 L 10 5 L 0 10 z" fill="var(--stream)" />
+                <path d="M 0 0 L 10 5 L 0 10 z" fill="#009EBA" />
               </marker>
               <marker id="arrowConc" viewBox="0 0 10 10" refX="9" refY="5" markerWidth="5" markerHeight="5" orient="auto-start-reverse">
                 <path d="M 0 0 L 10 5 L 0 10 z" fill="rgba(210,132,55,.6)" />
